Adding metadata fields

--- a/responsive-web-design/projects/3-product-landing-page/product-landing-page.html
+++ b/responsive-web-design/projects/3-product-landing-page/product-landing-page.html
@@ -7,6 +7,9 @@
     <!-- <meta http-equiv="refresh" content="2"> -->
 
     <title>Product Landing Page</title>
+    <meta charset="utf-8">
+    <meta name="author" content="Marc LeBlanc">
+    <meta name="description" content="Project file for Product Landing Page">
 
     <style>
         :root {
