--- a/responsive-web-design/projects/4-technical-documentation/documentation.html
+++ b/responsive-web-design/projects/4-technical-documentation/documentation.html
@@ -4,7 +4,7 @@
 
 <head>
     <!-- Refresh the browser to load file changes while I'm adding to these notes -->
-    <!-- <meta http-equiv="refresh" content="2"> -->
+    <meta http-equiv="refresh" content="2">
 
     <title>Technical Documentation</title>
 
@@ -31,7 +31,7 @@
 
         body {
             background-color: var(--body-background, lightgrey);
-            font-family: Arial, sans-serif;
+            font-family: Helvetica, Arial, sans-serif;
             font-size: large;
         }
 
@@ -71,7 +71,7 @@
         main {
             position: relative;
             left: 20%;
-            width: 80%;
+            width: 79%;
             padding: 10px;
             margin: 0px;
         }
@@ -94,7 +94,7 @@
 <body>
 
     <!-- Test script -->
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 
     <!-- #8: nav with id="navbar" -->
     <nav id="navbar">
